@@ -305,7 +305,79 @@ trait ReferenceableObject
         #print_r($location_array);
         return $location_array;
     }
-    
+
+    public function getReferencesLocationType( &$counter_array = array() )
+    {
+        $location_array = array();
+        foreach( $this->refrules as $cur )
+        {
+            #print "--------------\n";
+            #print get_class( $cur)."\n";
+            #print $cur->name()."\n";
+            if( isset($cur->owner->owner->owner->owner) && get_class( $cur->owner->owner->owner->owner ) == "PanoramaConf" )
+            {
+                //Panorama - Rule
+                if( isset($cur->owner->owner->owner) && $cur->owner->owner->owner !== null && method_exists($cur->owner->owner->owner,'name') && $cur->owner->owner->owner->name() !== "")
+                {
+                    #print "pan | ".$cur->owner->owner->owner->name()."\n";
+                    $location_array[ get_class($cur->owner->owner->owner)] = get_class($cur->owner->owner->owner);
+                    if( isset($counter_array[ get_class($cur->owner->owner->owner) ]))
+                        $counter_array[ get_class($cur->owner->owner->owner) ] += 1;
+                    else
+                        $counter_array[ get_class($cur->owner->owner->owner) ] = 1;
+                }
+            }
+            elseif( isset($cur->owner->owner->owner) && get_class( $cur->owner->owner->owner ) == "PanoramaConf" )
+            {
+                #Panorama - AddressGroup
+                if( isset($cur->owner->owner) && $cur->owner->owner !== null && method_exists($cur->owner->owner,'name') && $cur->owner->owner->name() !== "")
+                {
+                    #print "pan-fw | ".$cur->owner->owner->name()."\n";
+                    $location_array[ get_class($cur->owner->owner) ] = get_class($cur->owner->owner);
+                    if( isset($counter_array[ get_class($cur->owner->owner) ]))
+                        $counter_array[ get_class($cur->owner->owner) ] += 1;
+                    else
+                        $counter_array[ get_class($cur->owner->owner) ] = 1;
+                }
+            }
+            else
+            {
+                //possible to be on FW?????
+                if( isset($cur->owner->owner->owner) && $cur->owner->owner->owner !== null && method_exists($cur->owner->owner->owner,'name') && $cur->owner->owner->owner->name() !== "")
+                {
+                    #print "fw-pan | ".$cur->owner->owner->owner->name()."\n";
+                    $location_array[ get_class($cur->owner->owner->owner) ] = get_class($cur->owner->owner->owner);
+                    if( isset($counter_array[ get_class($cur->owner->owner->owner) ]))
+                        $counter_array[ get_class($cur->owner->owner->owner) ] += 1;
+                    else
+                        $counter_array[ get_class($cur->owner->owner->owner) ] = 1;
+                }
+                //Firewall
+                elseif( isset($cur->owner->owner) && $cur->owner->owner !== null && method_exists($cur->owner->owner,'name') && $cur->owner->owner->name() !== "")
+                {
+                    #print "fw | ".$cur->owner->owner->name()."\n";
+                    $location_array[ get_class($cur->owner->owner) ] = get_class($cur->owner->owner);
+                    if( isset($counter_array[ get_class($cur->owner->owner) ]))
+                        $counter_array[ get_class($cur->owner->owner) ] += 1;
+                    else
+                        $counter_array[ get_class($cur->owner->owner) ] = 1;
+                }
+            }
+
+
+            if( get_class( $cur ) == "AddressGroup" || get_class( $cur ) == "ServiceGroup"  )
+            {
+                //why is this needed
+                ##print $cur->name()."\n";
+                #$recursive_loc_array = $cur->getReferencesLocation( );
+                ##print_r( $recursive_loc_array );
+                #$location_array = array_merge( $location_array, $recursive_loc_array );
+            }
+        }
+        #print_r($location_array);
+        return $location_array;
+    }
+
     public function getReferencesStore()
     {
         $store_array = array();
