@@ -3,6 +3,7 @@ CHANGELOG
 2.0.73
 UTIL:
 * type=ssh-connector | introduction of new utility script
+* type=address | introduce new 'filter=(reflocationtype is.template/is.only.template/is.devicegroup/is.only.devicegroup )'
 
 BUGFIX:
 * type=certificate | bugfix for reading hash for ec certificates
